If with Else
If with ElseIf
While command with tests
Initial binary expressions Add Subtract
Name expression
Multiply, Divide Expression
Parse Binary Expression Level 1 and 2

2009-07-13
Parsing Procedure with Parameters, with tests
Example Tests SimpleAssignment.prg

2009-12-09
Comparison operators
CompareExpression w/Tests
Compare in Parser w/Tests
SimpleIf.prg
SimpleProcedure.prg Work in progress
Local, Public, Normal environments with tests
Define local and public variables in environments with tests

2009-12-10
Procedure
DoProcedureCommand
Parse do with initial tests
Parse do procedure without parameters w/test
Parse do procedure with parameters w/test
PublicCommand
Parse public var1,var2 w/test

2009-12-11
Public variable with test SimplePublicVariable.prg
PrivateCommand, LocalCommand with tests
Private, local, public variables with tests
NewExpression with Tests
TypeUtilities with Tests
new support in Parser
SimpleNewObject.prg tests

2009-12-18
Adding original Clipper include files
WorkArea with tests initial version
Database with tests initial version
UseDatabaseCommand with tests
UseWorkAreaCommand with tests
usedb in parser with tests
use in parser with tests
DotExpression with tests
support for . in Lexer and Parser
IObject in Language
ObjectUtilities with tests
DataUseDatabase.prg in tests
DataUseWorkArea.prg in tests

2009-12-19
use database syntax in Parser
use [workarea] syntax in Parser
name expression in use database, use workarea
command syntax in use workarea
EvaluateUtilities
DataGetField.prg in tests
ValueEnviroment now use key.ToLower()
Parser.ParseComplexName()
Parser.ParseNameExpression() supports dots and optional arguments
name expression as first parameter in NewExpression constructor
Northwind example

2009-12-20
Multiline support in Lexer, opened operators, Parser

2009-12-23
InvokeExpression
ReturnCommand
ExpressionCommand
Improved parser
ReturnExpression
Web Running Application

2009-12-24
Minor changes in Web App