@@ -1,9 +1,9 @@
 ﻿
-use database TestDb connectionstring "Provider=Microsoft.Jet.OLEDB.4.0;Data Source=.;Extended Properties=dBASE IV;User ID=Admin;Password=;" provider "System.Data.OleDb"
+open database TestDb connectionstring "Provider=Microsoft.Jet.OLEDB.4.0;Data Source=.;Extended Properties=dBASE IV;User ID=Admin;Password=;" provider "System.Data.OleDb"
 
 use Test command "select * from TEST order by CODIGO"
 
-move := Test.ReadNext()
+move := Test.MoveNext()
 code := Test.GetField("CODIGO")
 
 
