@@ -1,5 +1,5 @@
 ﻿
-use database TestDb connectionstring "Provider=Microsoft.Jet.OLEDB.4.0;Data Source=.;Extended Properties=dBASE IV;User ID=Admin;Password=;" provider "System.Data.OleDb"
+open database TestDb connectionstring "Provider=Microsoft.Jet.OLEDB.4.0;Data Source=.;Extended Properties=dBASE IV;User ID=Admin;Password=;" provider "System.Data.OleDb"
 
 use Test
 
